<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="total_amount">Total Amount: %s</string>
    <string name="how_was_the_services">How was the services?</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="todo">TODO</string>
    <string name="ok_15">Ok (15%)</string>
    <string name="dsc_uy1"> DSC UY1 2021 </string>
</resources>
